2002-03-07  Andras Varga

	* bugfix (id 0004 in the bugtracker): nedc-generated code crashed if
	parameter specified in a 'like' clause didn't exist

	* bugfix: generated code didn't compile if a user-defined function
	(see Define_Function() macro) was used inside a channel definition

2002-02-11  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* Makefile.in (nedc): use CXX instead of CC for linking (gcc-3 patch)

2002-01-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* msgc.pl (generateClass): Calls to setOwner() for cObjects and
	cObject arrays inside of constructors.

2002-01-22  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* msgc.pl (generateDescriptorClass): when generating
	getFieldStructPointer(): use getter function of message class,
	implies to get the pointer to the message class first.

2002-01-17  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* msgc.pl: added surrounding #ifndef/#define/#endif construct to
	_n.h file generation to avoid multiple inclusion. Therefore
	introduced new variable $hdef that holds the macro string

2002-01-16  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* nedcwrapper.sh: strip all command line arguments except the last
	one so that only the ned file name is left. Use this for running
	grep and perl.

2001-10-26 Andras Varga

	* ebnf.y, jar_expr.c, jar_lib.c, jar_func.h, jar_lib.h: implemented
        that an expression may refer to a submodule parameter. Syntax:
        submod.par or submod[index].par. Limitations: index may not be
        an expression itself (must be constant, for-variable or (submodule)
        parameter); the generated expression is of 'anytype' (no type-check).

2001-10-06 Andras Varga

	* msgc.pl msgtest.ned msgdoc.txt nedcwrapper.sh: checked in files for
        experimental message subclassing. Read msgdoc.txt for instructions on
        how to try it.

2001-07-11 Andras Varga

	* ebnf.y: Eric Wu's Tru64/MPI port. Tru64 needs extra #includes.

2001-03-10  Andras Varga
