@@ -1,3 +1,8 @@
+2002-04-05  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* msgc.pl (generateClass): fixed compiler warnings about
+	signed/unsigned comparison
+
 2002-03-07  Andras Varga
 
 	* bugfix (id 0004 in the bugtracker): nedc-generated code crashed if
